--- a/Kjersti/c.ipynb
+++ b/Kjersti/c.ipynb
@@ -199,6 +199,95 @@
     "plt.title('MSE of Ridge Gradient descent')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5453c2d7",
+   "metadata": {},
+   "source": [
+    "Funksjoner jeg klippa ut av functions.py:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93880e9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def polynomial_features(x, p, intercept=True):\n",
+    "    '''\n",
+    "    Generate a design matrix X.\n",
+    "\n",
+    "    Parameters:\n",
+    "        x: dataset\n",
+    "        p: number of features\n",
+    "        intercept: adds a column of intercept if set to True\n",
+    "\n",
+    "    Returns:\n",
+    "        X: design matrix with dimensions\n",
+    "             (n, p) if intercept=False or (n, p+1) if intercept=True\n",
+    "    '''\n",
+    "    n = len(x)\n",
+    "\n",
+    "    if intercept:\n",
+    "        X = np.zeros((n, p + 1))\n",
+    "        X[:, 0] = 1  # adds intercept\n",
+    "        for i in range(1, p + 1):\n",
+    "            X[:, i] = x ** i\n",
+    "    else:\n",
+    "        X = np.zeros((n, p))\n",
+    "        for i in range(0, p):\n",
+    "            X[:, i] = x ** (i + 1)\n",
+    "\n",
+    "    return X \n",
+    "\n",
+    "def standardize(X, y):\n",
+    "    '''\n",
+    "    Scale and standardize a design matrix X and data y.\n",
+    "\n",
+    "    Parameters:\n",
+    "        X: np.ndarray\n",
+    "        y: np.ndarray\n",
+    "    \n",
+    "    Returns:\n",
+    "        X_norm: np.ndarray\n",
+    "        y_centered: np.ndarray\n",
+    "        \n",
+    "    '''\n",
+    "    X_mean = X.mean(axis=0) # The mean of each column/feature\n",
+    "    X_std = X.std(axis=0)\n",
+    "    X_std[X_std == 0] = 1  # safeguard to avoid division by zero for constant features\n",
+    "    X_norm = (X - X_mean) / X_std\n",
+    "\n",
+    "    # Center the target to zero mean\n",
+    "    y_mean = y.mean()\n",
+    "    y_centered = y - y_mean\n",
+    "\n",
+    "    return X_norm, y_centered\n",
+    "\n",
+    "def MSE(y_data, y_pred):\n",
+    "    ''' \n",
+    "    Mean square error\n",
+    "    '''\n",
+    "    mse = np.mean((y_data - y_pred)**2)\n",
+    "\n",
+    "    return mse\n",
+    "\n",
+    "def R2(y_data, y_pred):\n",
+    "    '''\n",
+    "    R^2 score\n",
+    "    '''\n",
+    "    numerator = np.sum((y_data - y_pred)**2)\n",
+    "    denumerator = np.sum((y_data - np.mean(y_data))**2)\n",
+    "\n",
+    "    if denumerator == 0:\n",
+    "        r2 = np.nan\n",
+    "    else:\n",
+    "        r2 = 1 - numerator/denumerator\n",
+    "    \n",
+    "    return r2"
+   ]
   }
  ],
  "metadata": {
