--- a/Code/a_and_b.ipynb
+++ b/Code/a_and_b.ipynb
@@ -34,8 +34,7 @@
    "source": [
     "# a) Ordinary Least Squares (OLS)\n",
     "* Using OLS to predict the Runge function.\n",
-    "* Method is applied for the different number of data points in `n_vals` and for the different polynomial degrees in `p_vals`.\n",
-    "* Uses sklearn functionalities to make the model and assess the MSE and R^2 score."
+    "* Method is applied for the different number of data points in `n_vals` and for the different polynomial degrees in `p_vals`."
    ]
   },
   {
@@ -785,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "478e3c6c",
    "metadata": {},
    "outputs": [
@@ -795,7 +794,7 @@
        "Text(0.5, 0.98, 'OLS and Ridge \\\\\\\\n = 2000, $\\\\lambda$=1.00e-02')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -841,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "0a80ca34",
    "metadata": {},
    "outputs": [
