--- a/Code/a_and_b.ipynb
+++ b/Code/a_and_b.ipynb
@@ -34,28 +34,29 @@
    "source": [
     "# a) Ordinary Least Squares (OLS)\n",
     "* Using OLS to predict the Runge function.\n",
-    "* Method is applied for the different number of data points in `n_vals` and for the different polynomial degrees in `p_vals`."
+    "* Method is applied for the different number of data points in `n_vals` and for the different polynomial degrees in `p_vals`.\n",
+    "* Model performance assessed with MSE score and R^2 score."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3e150b30",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 2000\n",
-    "p_vals = np.arange(2, 16)"
+    "n = 2000  # samples\n",
+    "p_vals = np.arange(2, 16)  # polynomial degrees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "9862335f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_OLS_degs = OLS_various_poly_deg(n, p_vals)"
+    "df_OLS_degs = OLS_various_poly_deg(n, p_vals)  # Dataframe with results for n samples and range of poly degrees"
    ]
   },
   {
@@ -297,23 +298,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "ed2fad03",
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = 15\n",
-    "n_vals = np.arange(10, 2000, 1)"
+    "p = 15  # Polynomial degree\n",
+    "n_vals = np.arange(10, 2000, 1)  # samples"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "198b456e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_OLS_points = OLS_various_n_data(p, n_vals)"
+    "df_OLS_points = OLS_various_n_data(p, n_vals)  # Dataframe with results for one poly degree and for different number of samples"
    ]
   },
   {
@@ -392,29 +393,29 @@
     "# b) Ridge regression\n",
     "* Using Ridge regression to predict the Runge function.\n",
     "* Method is applied for different polynomial degrees (`p_vals`), and for different values of the penalization parameter $\\lambda$.\n",
-    "* Uses sklearn functionalities to make the model and assess the MSE and R^2 score."
+    "* Assessing model perfomance with MSE and R^2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "78ef38cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 2000\n",
-    "lamb = 0.01\n",
-    "p_vals = np.arange(2, 16)"
+    "n = 2000  # samples\n",
+    "lamb = 0.01  # regularization term\n",
+    "p_vals = np.arange(2, 16)  # range of polynomial degrees"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ffd08512",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_Ridge_degs = Ridge_various_poly_deg(n, lamb, p_vals)"
+    "df_Ridge_degs = Ridge_various_poly_deg(n, lamb, p_vals)  # dataframe w results"
    ]
   },
   {
