--- a/Code/a_and_b.ipynb
+++ b/Code/a_and_b.ipynb
@@ -779,6 +779,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 54,
+   "id": "28b99ea3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_Ridge_lambs['theta'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "c82a0b4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot alle theta"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 44,
    "id": "0d2b91a8",
    "metadata": {},
@@ -928,6 +959,62 @@
     "    axs.set_ylabel(r'$\\theta$')\n",
     "    axs.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ffabd0f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.50911619  0.00431541 -0.23782984]\n",
+      "[ 0.50910738  0.00685638 -0.23779895 -0.00142099]\n",
+      "[ 0.66595762  0.0159716  -0.7610328  -0.00889979  0.20491783]\n",
+      "[ 0.66592814  0.01942812 -0.76086108 -0.01427552  0.20483024  0.00162001]\n",
+      "[ 0.77344841  0.04035854 -1.51156784 -0.05651721  0.95518298  0.01687115\n",
+      " -0.1838345 ]\n",
+      "[ 0.77347627  0.0186936  -1.51273609  0.00867797  0.95711621 -0.03106306\n",
+      " -0.18447432  0.00992062]\n",
+      "[ 0.84804341  0.04278757 -2.40139036 -0.06785984  2.58495943  0.03249073\n",
+      " -1.12629595 -0.00511389  0.16855971]\n",
+      "[ 0.84803156  0.04995092 -2.40053527 -0.10306203  2.58278095  0.07837085\n",
+      " -1.12476466 -0.02702003  0.1682404   0.00345797]\n",
+      "[ 0.89126376  0.06994289 -3.19201824 -0.20765267  4.88032226  0.23447619\n",
+      " -3.4321415  -0.11146082  1.10596976  0.0183744  -0.13249128]\n",
+      "[ 0.8913537   0.05260031 -3.19643406 -0.07965049  4.89596636 -0.02497043\n",
+      " -3.45027282  0.10067458  1.1142607  -0.05688108 -0.13378914  0.00964623]\n",
+      "[ 9.09190510e-01  6.25687076e-02 -3.68796872e+00 -1.70396756e-01\n",
+      "  7.02592615e+00  1.96080573e-01 -6.75350784e+00 -1.09112316e-01\n",
+      "  3.39883441e+00  2.74257641e-02 -8.55275493e-01 -2.38822148e-03\n",
+      "  8.48522894e-02]\n",
+      "[ 0.90911576  0.07481642 -3.68302426 -0.3188363   6.99933729  0.66458598\n",
+      " -6.70443893 -0.71509326  3.3596002   0.39879357 -0.84124775 -0.10984414\n",
+      "  0.08301359  0.01182227]\n",
+      "[ 0.90955339  0.07493574 -3.62848774 -0.30047469  6.43417886  0.57121157\n",
+      " -5.13084814 -0.55689895  1.5029109   0.28124332  0.22003582 -0.07024298\n",
+      " -0.20773816  0.00687663  0.0306092 ]\n",
+      "[ 9.09503953e-01  7.95262650e-02 -3.62720000e+00 -3.12661087e-01\n",
+      "  6.43496083e+00  4.87735134e-01 -5.14847360e+00 -2.56849481e-01\n",
+      "  1.53558714e+00 -8.06275485e-02  1.95981947e-01  1.32899971e-01\n",
+      " -1.99865624e-01 -4.73236643e-02  2.96567000e-02  5.55461483e-03]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in df_Ridge_degs['theta']:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23401bb8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
