noen kommentarer til plots

--- a/Code/a_and_b.ipynb
+++ b/Code/a_and_b.ipynb
@@ -179,6 +179,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0d417892",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      -17.071425\n",
+       "1      -17.073440\n",
+       "2      -48.244073\n",
+       "3      -49.746934\n",
+       "4     -130.233504\n",
+       "5     -134.312380\n",
+       "6     -284.697241\n",
+       "7     -284.171330\n",
+       "8     -594.657841\n",
+       "9     -592.630691\n",
+       "10   -1217.752559\n",
+       "11   -1216.701084\n",
+       "12   -2575.657344\n",
+       "13   -2574.712776\n",
+       "Name: MSE_test, dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Percentage difference in MSE (test) when noise is added\n",
+    "((df_OLS_degs_no_noise['MSE_test'] - df_OLS_degs['MSE_test'])/df_OLS_degs_no_noise['MSE_test'])*100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad31e38f",
+   "metadata": {},
+   "source": [
+    "Added stochastic noise, worsened the MSE. The magnitude grows with polynomial degree, suggesting that higher order polynomials are more sensitive to noise, likely due to overfitting (amplifying the noise)."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "55c4ec25",
    "metadata": {},
@@ -495,6 +539,52 @@
     "\n",
     "ax[0].set_ylabel('MSE')\n",
     "ax[1].set_ylabel(r'$R^2$')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "131d867c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The polynomial degree with the lowest MSE_test is: 1910\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_mse = df_Ridge_points.loc[df_Ridge_points['MSE_test'].idxmin()]\n",
+    "\n",
+    "# Get the p value for minimum mse\n",
+    "best_n = min_mse['n']\n",
+    "\n",
+    "print(\"The polynomial degree with the lowest MSE_test is:\", best_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "66a2de30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The polynomial degree with the largest r2_test is: 1310\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_r2 = df_Ridge_points.loc[df_Ridge_points['R2_test'].idxmax()]\n",
+    "\n",
+    "# Get the p value for maximum r2\n",
+    "best_n = max_r2['n']\n",
+    "\n",
+    "print(\"The polynomial degree with the largest r2_test is:\", best_n)"
    ]
   },
   {
