--- a/Code/e_and_f.ipynb
+++ b/Code/e_and_f.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "08e554d7",
    "metadata": {},
    "outputs": [
@@ -17,62 +17,169 @@
    ],
    "source": [
     "from functions import *\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.preprocessing import PolynomialFeatures\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler, Normalizer\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "import matplotlib.style as mplstyle\n",
     "mplstyle.use(['ggplot', 'fast'])\n",
-    "\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "plt.rcParams.update({\n",
     "    \"text.usetex\": True,       \n",
     "    \"font.family\": \"serif\",    \n",
     "    \"font.size\": 10, \n",
     "})\n",
     "\n",
-    "np.random.seed(2018)"
+    "seed = np.random.seed(2018)\n",
+    "\n",
+    "# Hyperparameters from part a and b:\n",
+    "polynomial_degree     = 14\n",
+    "number_of_data_points = 2000\n",
+    "lambda_               = 1e-5\n",
+    "# Hyperparameters from part c, d e and f:\n",
+    "learning_rate = 0.01\n",
+    "n_iterations  = 2000\n",
+    "tolerance     = 1e-10\n",
+    "use_tol       = True\n",
+    "beta          = 0.9\n",
+    "beta1         = 0.9\n",
+    "beta2         = 0.9\n",
+    "epsilon       = 1e-8\n",
+    "lambda_       = 0.001\n",
+    "batch_size    = 32"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "d831cdff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "polynomial_degree     = 13\n",
-    "n = 2000\n",
-    "lambda_               = 1e-5\n",
     "\n",
-    "learning_rate = 0.01\n",
-    "n_iterations  = 10000\n",
-    "tolerance     = 1e-6\n",
-    "use_tol       = True\n",
+    "#We create the data\n",
+    "train, test, full = make_data(number_of_data_points, seed)\n",
     "\n",
-    "train, test, full = make_data(n, 2018)\n",
+    "# We start by splitting the data into training and test sets\n",
+    "x_train, x_test, y_train, y_test = train[0], test[0], train[1], test[1]\n",
+    "x_train = x_train.reshape(-1, 1)\n",
+    "x_test  = x_test.reshape(-1, 1)\n",
     "\n",
-    "X_train = train[0].reshape(-1,1)\n",
-    "X_test = test[0].reshape(-1,1)\n",
-    "y_train = train[1]\n",
-    "y_test = test[1]\n",
-    "\n",
-    "#scaler = StandardScaler()\n",
-    "#scaler.fit(X_train)\n",
-    "#x_train_scaled = scaler.transform(X_train)\n",
-    "#x_test_scaled  = scaler.transform(X_test)\n",
-    "\n",
-    "poly = PolynomialFeatures(degree=polynomial_degree, include_bias=True)\n",
-    "X_train_ = poly.fit_transform(X_train)#_scaled)\n",
-    "X_test = poly.transform(X_test)\n"
+    "# Making design matrices based of the scaled and split data\n",
+    "X_train = polynomial_features(x_train, polynomial_degree, intercept=True)\n",
+    "X_test  = polynomial_features(x_test,  polynomial_degree, intercept=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fd328ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OLS regression : \n",
+    "# OLS analytical solution\n",
+    "theta_ols  = OLS_parameters(X_train, y_train)\n",
+    "y_pred_ols = X_test @ theta_ols\n",
+    "mse_ols    = MSE(y_test, y_pred_ols)\n",
+    "r2_ols     = R2(y_test, y_pred_ols)\n",
+    "# Gradient descent solution\n",
+    "theta_gd_ols, cost_history_ols = gradient_descent_ols(X_train, y_train, learning_rate, n_iterations, tolerance, use_tol)\n",
+    "y_pred_gd_ols = X_test @ theta_gd_ols\n",
+    "mse_gd_ols    = MSE(y_test, y_pred_gd_ols)\n",
+    "r2_gd_ols     = R2(y_test, y_pred_gd_ols)\n",
+    "# Print results\n",
+    "print(f\"OLS Analytical Solution : MSE = {mse_ols:.6f}, R2 = {r2_ols:.6f}\")\n",
+    "print(f\"OLS Gradient Descent    : MSE = {mse_gd_ols:.6f}, R2 = {r2_gd_ols:.6f}\")\n",
+    "print()\n",
+    "# RIDGE regression : \n",
+    "# Analytical solution\n",
+    "beta_ridge   = Ridge_parameters(X_train, y_train, lambda_)\n",
+    "y_pred_ridge = X_test @ beta_ridge\n",
+    "mse_ridge    = MSE(y_test, y_pred_ridge)\n",
+    "r2_ridge     = R2(y_test, y_pred_ridge)\n",
+    "# Gradient descent solution\n",
+    "beta_gd_ridge, cost_history_ridge = gradient_descent_ridge(X_train, y_train, lambda_, learning_rate, n_iterations, tolerance, use_tol)\n",
+    "y_pred_gd_ridge = X_test @ beta_gd_ridge\n",
+    "mse_gd_ridge    = MSE(y_test, y_pred_gd_ridge)\n",
+    "r2_gd_ridge     = R2(y_test, y_pred_gd_ridge)\n",
+    "# Print results\n",
+    "print(f\"Ridge Analytical Solution: MSE = {mse_ridge:.6f}, R2 = {r2_ridge:.6f}\")\n",
+    "print(f\"Ridge Gradient Descent:    MSE = {mse_gd_ridge:.6f}, R2 = {r2_gd_ridge:.6f}\")\n",
+    "# Gradient descent solution for Lasso\n",
+    "beta_gd_lasso, cost_history_lasso = gradient_descent_lasso(X_train, y_train, lambda_, learning_rate, n_iterations, tolerance, use_tol)\n",
+    "y_pred_gd_lasso = X_test @ beta_gd_lasso\n",
+    "mse_gd_lasso    = MSE(y_test, y_pred_gd_lasso)\n",
+    "r2_gd_lasso     = R2(y_test, y_pred_gd_lasso)\n",
+    "# Print results\n",
+    "print(f\"Lasso Gradient Descent:    MSE = {mse_gd_lasso:.6f}, R2 = {r2_gd_lasso:.6f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9e3ce92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9db6dcf7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17233662",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a91dff6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0015937",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfce59a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "778e6fd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c2e639b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0e4461da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
