--- a/Code/ks_c_and_d.ipynb.ipynb
+++ b/Code/ks_c_and_d.ipynb.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "660081f5",
    "metadata": {},
    "outputs": [
@@ -274,8 +274,7 @@
     "mse_gd_lasso    = MSE(y_test, y_pred_gd_lasso)\n",
     "r2_gd_lasso     = R2(y_test, y_pred_gd_lasso)\n",
     "# Print results\n",
-    "print(f\"Ridge Analytical Solution: MSE = {mse_ridge:.6f}, R2 = {r2_ridge:.6f}\")\n",
-    "print(f\"Ridge Gradient Descent:    MSE = {mse_gd_ridge:.6f}, R2 = {r2_gd_ridge:.6f}\")"
+    "print(f\"Lasso Gradient Descent:    MSE = {mse_gd_lasso:.6f}, R2 = {r2_gd_lasso:.6f}\")"
    ]
   },
   {
@@ -636,7 +635,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
